# kaggle_template

./: .dockerignore  .gitignore  encode.py  pyproject.toml
codes/utils/: misc.py
