[tool.poetry]
name = "kaggle_template"
version = "0.1.0"
description = ""
authors = ["mski_iksm <34547057+mski-iksm@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = ">=3.6.4"
tqdm = "*"
pandas = "*"
ipython = "*"
sklearn = "*"
lightgbm = "*"
catboost = "*"
xgboost = "*"
numpy = "*"
scipy = "*"
seaborn = "*"
gitpython = "^3.1.11"
hydra = "^2.5"
torch = "^1.7.1"
pytest = "^6.2.2"
kaggle = "^1.5.12"

[tool.poetry.dev-dependencies]
yapf = "^0.30.0"
mypy = "^0.790"
flake8 = "^3.8.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
